Fix to work with Java 8.